edit path api
